implemented dark mode

--- a/translations/fifth-section/en.json
+++ b/translations/fifth-section/en.json
@@ -8,6 +8,6 @@
   "phone": "Phone Number",
   "email": "Email",
   "subject": "Subject",
-  "messaje": "Message",
+  "message": "Message",
   "sendMessage": "Send Message"
 }
