--- a/translations/fifth-section/es.json
+++ b/translations/fifth-section/es.json
@@ -8,6 +8,6 @@
   "phone": "Celular",
   "email": "Email",
   "subject": "Asunto",
-  "messaje": "Mensaje",
+  "message": "Mensaje",
   "sendMessage": "Enviar"
 }
