new projects added

--- a/translations/focus/es.json
+++ b/translations/focus/es.json
@@ -1,7 +1,7 @@
 {
   "first": "Proyecto",
   "second": "Desarrollo",
-  "description": "Esta fue mi primera Landing Page y mi primer trabajo como desarrollador Front-End. Fue principalmente desarrollada en el framework Nuxt, utilizando Vue. Se utilizaron varias librerias como TailwindCSS para el estilado directo desde HTML y AOS (animation on scroll). Es un proyecto Landing Page. Decidí migrar está aplicación web a Next ya que me estoy profundizando mucho mas en este framework. Cuenta con un formulario totalmente funcional donde puedes contactarte directamente con la empresa para contratar sus servicios o para consultar cualquier duda que tengas.",
+  "description": "Esta pagina web fue realizada para la productora audiovisual Liberty Eye ubicada en España. Utilicé Next 13 para tener un workflow más fluido y poder sacarle el mayor provecho a su componente Image, y para el estilado utilicé TailwindCSS.",
   "back": "Atras",
   "code": "Codigo",
   "tecnologies": "Tecnologías",
