--- a/translations/focus/en.json
+++ b/translations/focus/en.json
@@ -1,7 +1,7 @@
 {
   "first": "Project",
   "second": "Overview",
-  "description": "This was my first Landing Page project and my first job as a Front-End developer. It was mainly developed using the Nuxt framework, using Vue. Several libraries were employed, such as TailwindCSS (HTML based style) and AOS (animation on scroll). I decided to move this web app to Next since I am currently in the processing of learning the intricacies of this framework. It also includes a completely functional form where you can directly contact the company to hire its services or ask anything you'd like.",
+  "description": "This web page was made for the audiovisual production company Liberty Eye located in Spain. I use Next 13 for a smoother workflow and to get the most out of your Image component, and for styling I use TailwindCSS.",
   "back": "Back",
   "code": "Code",
   "tecnologies": "Technologies",
